--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,21 @@
+plugins {
+    id 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
     defaultConfig {
-        applicationId "com.simcoder.tinder"
+        applicationId 'com.codrata.sturrd'
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [onesignal_app_id               : '8356bc82-d48b-4e50-a67d-a29558f3b9a9',
+                                onesignal_google_project_number: 'REMOTE']
     }
     buildTypes {
         release {
@@ -17,34 +23,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:support-annotations:x.x.x'
-    compile 'com.google.firebase:firebase-core:11.0.4'
-    compile 'com.google.firebase:firebase-database:11.0.4'
-    compile 'com.google.firebase:firebase-auth:11.0.4'
-    compile 'com.google.firebase:firebase-storage:11.0.4'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.lorentzos.swipecards:library:1.0.9'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation 'com.onesignal:OneSignal:3.8.3'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.lorentzos.swipecards:library:1.0.9'
+    implementation 'com.github.ceryle:RadioRealButton:v2.1.1'
+    testImplementation 'junit:junit:4.12'
 }
 
 
 
 apply plugin: 'com.google.gms.google-services'
-
-
-
-
-
-
-
